frontend/test/should_fail/index_exec_edge_countFromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:int=countEdgesFromIndexFrom(j, j) }
}